--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -76,7 +76,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" onclick="loadLogout('logout',this)">Logout</a>
                 </li>
 
             </ul>
