--- a/Backend/public/views/login.ejs
+++ b/Backend/public/views/login.ejs
@@ -78,22 +78,17 @@
             const name = document.getElementById("adminUserName");
             const password = document.getElementById("adminUserPassword");
 
-            const formData = new FormData();
-            formData.append("name", name.value);
-            formData.append("password", password.value);
-
-            // fetch("/api/users/login")
-            // http://localhost:5001/api/users/login
-            fetch('http://localhost:5001/api/users/login', {
-                method: 'POST',
-                body: formData,
+            fetch('api/users/login', {
+                method: 'POST',                
+                body: JSON.stringify({name:name.value,password:password.value}),
                 headers: {
-                    'Content-Type': 'multipart/form-data',
+                    'Content-Type': 'application/json',                    
                 },
+                withCredentials: true,
             })
                 .then(response => response.json())
-                .then(data => {
-
+                .then(data => {                    
+                    console.log(data);
                 })
                 .catch(error => {
                     console.error('Error uploading file:', error);
