--- a/Frontend/src/components/css/PopularCourses.scss
+++ b/Frontend/src/components/css/PopularCourses.scss
@@ -1,5 +1,5 @@
 .popular-courses-container{
-  background-image: url("./images/courses.jpg");
+background-image: url("./images/DSC_0044.JPG");
 background-repeat: no-repeat;
 background-size: cover;
 padding: 50px;
