--- a/Frontend/src/components/css/ProductsHomePage.css
+++ b/Frontend/src/components/css/ProductsHomePage.css
@@ -30,7 +30,7 @@
 }
 
 .view-more-button {
-    background-color: #e51123;
+    background-color: #fe0015;
     color: #fff;
     margin-right: 620px;
     margin-top: 20px;
