--- a/Frontend/src/components/css/ContactUs.scss
+++ b/Frontend/src/components/css/ContactUs.scss
@@ -186,7 +186,8 @@ button:hover {
 }
 
 .landing__page {
-  background: url("./images/banner-bg.png") no-repeat fixed center;
+  background: url("./images/landing5.jpg") no-repeat fixed center;
+  // background-color: rgb(238, 242, 242);
   background-size: cover;
 }
 
