--- a/Backend/public/views/login.ejs
+++ b/Backend/public/views/login.ejs
@@ -79,17 +79,18 @@
             const password = document.getElementById("adminUserPassword");
 
             fetch('api/users/login', {
-                method: 'POST',                
-                body: JSON.stringify({name:name.value,password:password.value}),
+                method: 'POST',
+                body: JSON.stringify({ name: name.value, password: password.value }),
                 headers: {
-                    'Content-Type': 'application/json',                    
+                    'Content-Type': 'application/json',
                 },
                 withCredentials: true,
             })
-                .then(response => response.json())
-                .then(data => {                    
-                    console.log(data);
-                })
+                .then(response => {
+                    if (response.ok) {
+                        window.location.href = '/';
+                    }
+                })              
                 .catch(error => {
                     console.error('Error uploading file:', error);
                 });
