form element running errors

--- a/Backend/public/views/courses/updateCourse.ejs
+++ b/Backend/public/views/courses/updateCourse.ejs
@@ -15,11 +15,11 @@
 <!-- Subtitle Dropdown -->
 <div id="subtitleVisiblity" style="display: none; flex-direction: column;">
     <label for="subtitle">Select Subtitle:</label>
-    <select id="subtitle" onchange="handleSubtitleSelection()">       
+    <select id="subtitle" onchange="handleSubtitleSelection()">
         <!-- Add more options as needed -->
     </select>
     <br>
-    <button type="button" id="subButtonBtn" 
+    <button type="button" id="subButtonBtn"
         onclick="toggleVisibility('yesSubtitle','upAddSubtDescVisiblity','subtitleContent')">New Sub</button>
     <br>
 
@@ -30,8 +30,7 @@
         <br>
 
         <!-- Description Input Box -->
-        <label for="quill-editorSubupAdd">Description:</label>
-        <!-- <div id="quill-editorSub" name="description"></div> -->
+        Description:
         <div id="quill-editorSubupAdd" name="description"></div>
         <br>
 
@@ -42,13 +41,12 @@
         <label for="updatesubTitle">Sub Title:</label>
         <input type="text" id="updatesubTitle" name="subTitle" required>
         <br>
-    
+
         <!-- Description Input Box -->
-        <label for="quill-editorSubup">Description:</label>
-        <!-- <div id="updataequill-editorSub" name="description"></div> -->
+        Description:
         <div id="quill-editorSubup" name="description"></div>
         <br>
-    
+
         <button type="button" id="updateBtn" onclick="updateCourseListSubtitle()">Update Subtitle</button>
     </div>
     <br>
@@ -58,7 +56,7 @@
 
 <!-- Description Input Box -->
 <div id="descriptionVisiblity" style="display: none;">
-    <label for="quillUpdateDescription">Description:</label>
+    Description:
     <div id="quillUpdateDescription" name="description"></div>
     <!-- <textarea id="updateDescription" rows="4" placeholder="Enter course description..."></textarea> -->
     <br>
