--- a/Backend/public/views/notification/addNotification.ejs
+++ b/Backend/public/views/notification/addNotification.ejs
@@ -12,7 +12,7 @@
     <!-- <span>Subtitle:</span> -->
     <br>
 
-    <label for="quill-addNotification">Description:</label>
+    Description:
     <div id="quill-addNotification" aria-label="Editor for describing something"></div>
 
 
