--- a/Backend/public/views/notification/updateNotification.ejs
+++ b/Backend/public/views/notification/updateNotification.ejs
@@ -15,7 +15,7 @@
 <input type="text" id="UpdateNotificationName" name="Notification Name" required>
 <br>
 
-<label for="quill-UpdateNotification">Description:</label>
+Description:
 <div id="quill-UpdateNotification" name="description"></div>
 
 <br>
