unique name update

--- a/Backend/public/views/courses/deleteCourse.ejs
+++ b/Backend/public/views/courses/deleteCourse.ejs
@@ -21,6 +21,6 @@
     <br>
 </div>
 
-<button type="button" id="subButtonBtn" 
+<button type="button" id="deleteSubmitBtn" 
     onclick="deleteCourse()">Delete</button>
 <br>
