--- a/Backend/public/views/courses/addCourse.ejs
+++ b/Backend/public/views/courses/addCourse.ejs
@@ -60,5 +60,5 @@
 
     <br><br>
     <!-- Submit Button -->
-    <input id="submitButton" type="submit" value="Submit" onclick="handleAddCourseSubmit()">
+    <input id="submitButton" type="submit" value="Submit" onclick="handleAddCourseSubmit(event)">
 </form>
