Button Enb/Dsb, Delete All proper delete

--- a/Backend/public/views/products/addProduct.ejs
+++ b/Backend/public/views/products/addProduct.ejs
@@ -39,5 +39,5 @@
 
     <br><br>
     <!-- Submit Button -->
-    <input type="submit" value="Submit" onclick="handleSubmitProduct()">
+    <button type="button" id="addProdBtn" onclick="handleSubmitProduct()">Submit</button>
 </form>
