--- a/Backend/public/views/products/deleteProduct.ejs
+++ b/Backend/public/views/products/deleteProduct.ejs
@@ -21,6 +21,6 @@
     <br>
 </div>
 
-<button type="button" id="subButtonBtn" 
+<button type="button" id="deleteSubButtonBtn" 
     onclick="deleteProduct()">Delete</button>
 <br>
