Testimonial running path

--- a/Backend/public/views/testimonial/addtestimonial.ejs
+++ b/Backend/public/views/testimonial/addtestimonial.ejs
@@ -17,5 +17,5 @@
     <br>
 
     <!-- Submit Button -->
-    <button type="button" onclick="handleTestimonial()">Submit</button>
+    <button type="button" id="addTestimonialBtn" onclick="handleTestimonial()">Submit</button>
 </form>
