--- a/Backend/public/views/testimonial/deleteTestimonial.ejs
+++ b/Backend/public/views/testimonial/deleteTestimonial.ejs
@@ -13,4 +13,4 @@
 
 
 
-<button type="button" onclick="handleDeleteTestimonial()">Delete</button>
+<button type="button" id="deleteTestimonialBtn" onclick="handleDeleteTestimonial()">Delete</button>
