--- a/Backend/public/views/testimonial/updateTestimonial.ejs
+++ b/Backend/public/views/testimonial/updateTestimonial.ejs
@@ -19,4 +19,4 @@
 <textarea id="UpdateTestimonialDescription" name="Testimonial Description" rows="4" required></textarea>
 <br>
 
-<button type="button" onclick="handleUpdateSubmitTestimonial()">Submit</button>
+<button type="button" id="updateTestimonialBtn" onclick="handleUpdateSubmitTestimonial()">Submit</button>
