Notification Runing patch fix

--- a/Backend/public/views/notification/addNotification.ejs
+++ b/Backend/public/views/notification/addNotification.ejs
@@ -17,5 +17,5 @@
 
 
     <!-- Submit Button -->
-    <input id="submitButton" type="submit" value="Submit" onclick="handleAddNotificationSubmit(event)">
+    <input id="NotificationsubmitButton" type="submit" value="Submit" onclick="handleAddNotificationSubmit(event)">
 </form>
