--- a/Backend/public/views/notification/deleteNotification.ejs
+++ b/Backend/public/views/notification/deleteNotification.ejs
@@ -13,4 +13,4 @@
 
 
 
-<button type="button" onclick="handleDeleteNotification()">Delete</button>
+<button type="button" id="deleteNotificationBtn" onclick="handleDeleteNotification()">Delete</button>
