--- a/Backend/public/views/notification/updateNotification.ejs
+++ b/Backend/public/views/notification/updateNotification.ejs
@@ -19,4 +19,4 @@ Description:
 <div id="quill-UpdateNotification" name="description"></div>
 
 <br>
-<button type="button" onclick="updateNotificationList()">Update</button>
+<button type="button" id="updateNotificationBtn" onclick="updateNotificationList()">Update</button>
