--- a/Frontend/src/components/css/Features.scss
+++ b/Frontend/src/components/css/Features.scss
@@ -9,7 +9,7 @@
 
 .testimonial__content {
   padding-block: 30px;
-  background-image: url(./images/testimonial-1.png) ;
+  background-image: url(./images/DSC_0053.JPG) ;
     background-repeat: no-repeat;
     background-size: cover;
 }
