--- a/Frontend/src/components/css/PopularCourses.scss
+++ b/Frontend/src/components/css/PopularCourses.scss
@@ -1,5 +1,5 @@
 .popular-courses-container{
-background-image: url("./images/DSC_0044.JPG");
+background-image: url("./images/IMG_1.jpeg");
 background-repeat: no-repeat;
 background-size: cover;
 padding: 50px;
@@ -7,7 +7,7 @@ padding-bottom: 80px;
 h1{
   display: flex;
   justify-content: center;
-  color: rgb(0, 0, 0);
+  color: rgb(244, 244, 244);
   margin: 20px;
 }
 }
