--- a/Frontend/src/components/css/Footer.scss
+++ b/Frontend/src/components/css/Footer.scss
@@ -232,7 +232,7 @@
     max-width: 100%; /* Set to 100% for smaller screens */
   }
   .product-item {
-    height: 200px !important;
+    min-height: 90px !important;
     min-width: 300px !important;
   }
 
