--- a/Frontend/src/components/css/Products.css
+++ b/Frontend/src/components/css/Products.css
@@ -82,10 +82,16 @@ body {
   background-color: #FFC0C7;
   padding: 24px;
   width: 400px;
-  height: 80px;
+  height: 100px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
+@media (max-width: 768px) {
+  .product-item {
+    height: auto; /* Allow the height to adjust based on content */
+    width: 100%; /* Make it full width on smaller screens */
+    max-width: 400px; /* Limit the width for smaller screens */
+  }}
 
 .product__contents{
   display: flex;
