New Format Testimonial in UI

--- a/Backend/public/views/adminHome.ejs
+++ b/Backend/public/views/adminHome.ejs
@@ -57,9 +57,10 @@
                         Testimonial
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts" id="testimonial">
-                        <a class="dropdown-item" onclick="loadSection('addtestimonial',this)">Add</a>
+                        <!-- <a class="dropdown-item" onclick="loadSection('addtestimonial',this)">Add</a>
                         <a class="dropdown-item" onclick="loadSection('updateTestimonial',this)">Update</a>
-                        <a class="dropdown-item" onclick="loadSection('deleteTestimonial',this)">Delete</a>
+                        <a class="dropdown-item" onclick="loadSection('deleteTestimonial',this)">Delete</a> -->
+                        <a class="dropdown-item" onclick="loadSection('addTestimonial',this)">Add</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -103,7 +104,8 @@
     <script src="/js/course.js" defer></script>
     <script src="/js/product.js" defer></script>
     <script src="/js/gallary.js" defer></script>
-    <script src="/js/testimonial.js" defer></script>
+    <!-- <script src="/js/testimonial.js" defer></script> -->
+    <script src="/js/testimonialNFmt.js" defer></script>
     <script src="/js/notification.js" defer></script>
 </body>
 
