--- a/Frontend/src/components/css/Features.scss
+++ b/Frontend/src/components/css/Features.scss
@@ -3,16 +3,16 @@
     text-align: center !important;
     width: 600px !important;
 }
-.testimonial__header{
-  text-align: center;
-}
+// .testimonial__header{
+//   text-align: center;
+// }
 
-.testimonial__content {
-  padding-block: 30px;
-  background-image: url(./images/DSC_0053.JPG) ;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+// .testimonial__content {
+//   padding-block: 30px;
+//   background-image: url(./images/DSC_0053.JPG) ;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+// }
   
 .slick-arrow .slick-prev{
 bottom: 0;
@@ -32,77 +32,77 @@ color: red;
   z-index: 3;
 }
 
-.team__card{
-  border: none;
-  margin-left: 30px;
-  width: 600px !important;
-  border-bottom : 4px solid transparent;
-  border-top : 4px solid transparent;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+// .team__card{
+//   border: none;
+//   margin-left: 30px;
+//   width: 600px !important;
+//   border-bottom : 4px solid transparent;
+//   border-top : 4px solid transparent;
+//   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
-  .card__bg-photo {
-      position: relative;
-      height: 200px;
-      // background: url("https://images.unsplash.com/photo-1511207538754-e8555f2bc187?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=88672068827eaeeab540f584b883cc66&auto=format&fit=crop&w=1164&q=80") no-repeat;
-      background-size: cover;
-      backface-visibility: hidden;
+//   .card__bg-photo {
+//       position: relative;
+//       height: 200px;
+//       // background: url("https://images.unsplash.com/photo-1511207538754-e8555f2bc187?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=88672068827eaeeab540f584b883cc66&auto=format&fit=crop&w=1164&q=80") no-repeat;
+//       background-size: cover;
+//       backface-visibility: hidden;
 
 
-      &::after{
-        content: '';
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        background-color: rgba(0 ,0 ,0 , 0.3);
-      }
-    }
+//       &::after{
+//         content: '';
+//         position: absolute;
+//         left: 0;
+//         right: 0;
+//         top: 0;
+//         bottom: 0;
+//         background-color: rgba(0 ,0 ,0 , 0.3);
+//       }
+//     }
     
-    .card__face-photo {
-      position: absolute;
-      z-index: 1;
-      top:130px;
-      right: 0;
-      height: 120px;
-      width: 120px;
-      margin: 0 auto;
-      border-radius: 50%;
-      border: 5px solid WHITE;
-      // background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/156905/profile/profile-512.jpg?1530296477")
-        // no-repeat;
-      background-size: contain;
-  }
+//     .card__face-photo {
+//       position: absolute;
+//       z-index: 1;
+//       top:130px;
+//       right: 0;
+//       height: 120px;
+//       width: 120px;
+//       margin: 0 auto;
+//       border-radius: 50%;
+//       border: 5px solid WHITE;
+//       // background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/156905/profile/profile-512.jpg?1530296477")
+//         // no-repeat;
+//       background-size: contain;
+//   }
 
-  .card__text-container{
-    background-color: white;
-    padding-bottom: 15px;
-    min-height: 270px;
-    max-height: 270px;
-    .card__text-header {
-      font-weight: 700;
-      padding: 20px;
-      text-transform: uppercase;
-      font-size: 20px;
-    }
-    .card__text-position{
-      padding: 0 20px 20px 20px;
-    }
+//   .card__text-container{
+//     background-color: white;
+//     padding-bottom: 15px;
+//     min-height: 270px;
+//     max-height: 270px;
+//     .card__text-header {
+//       font-weight: 700;
+//       padding: 20px;
+//       text-transform: uppercase;
+//       font-size: 20px;
+//     }
+//     .card__text-position{
+//       padding: 0 20px 20px 20px;
+//     }
 
-  }
-    &:hover{
-      box-shadow:  rgba(149, 157, 165, 0.4) 0px 8px 24px;
-      transition: 0.3s;
-      border-bottom : 4px solid red;
-      border-top : 4px solid red;
+//   }
+//     &:hover{
+//       box-shadow:  rgba(149, 157, 165, 0.4) 0px 8px 24px;
+//       transition: 0.3s;
+//       border-bottom : 4px solid red;
+//       border-top : 4px solid red;
 
 
-      .card__face-photo {
-        border: 5px solid red;
-        transition: 0.1s;
-      }
-    }   
-}
+//       .card__face-photo {
+//         border: 5px solid red;
+//         transition: 0.1s;
+//       }
+//     }   
+// }
 
 .features{
   justify-content: space-around;
