--- a/Frontend/src/components/css/ContactUs.scss
+++ b/Frontend/src/components/css/ContactUs.scss
@@ -199,7 +199,7 @@ button:hover {
 }
 
 .landing__page {
-  background: url("./images/bg-1.jpg") no-repeat fixed center;
+  background: url("./images/2893.jpg") no-repeat fixed center;
   // background-color: rgb(238, 242, 242);
   background-size: cover;
 }
