--- a/Frontend/src/components/css/Products.css
+++ b/Frontend/src/components/css/Products.css
@@ -102,13 +102,14 @@ body {
 
 .product__item{
   color: black;
-  background-color: rgb(60, 158, 219);
+  cursor: pointer;
+  background-color: rgb(84, 165, 251);
   padding: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 150px;
-  min-width: 340px;
+  height: 80px;
+  min-width: 300px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
